Fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,6 +297,8 @@ h1 {
     padding: 30px 0 60px 0;
 }
 
+.footer { padding-top: 60px; }
+
 .footer-copyright {
     text-align: center;
     padding: 30px 0;
